sorts through some of the ‘run off’ at the end of Chapter 2

--- a/finite.tex
+++ b/finite.tex
@@ -155,6 +155,34 @@ Classification of closed points
 
 \citeme{Section 12 of Neil's FG notes talk about the infinite height subscheme of $\moduli{fgl}$. He compares it to $H_* MO$ and to the Hurewicz image $\pi_* MU \to H_*(MU; \F_p)$.}
 
+---
+
+As a consequence, we should be able to get that $\pi_* MU$ is \emph{exactly} the Lazard ring, since it rationalizes to the theory of logarithms, where it's an isomorphism.
+
+Here are some things Quillen wrote about this:
+
+\begin{definition}(6.2)
+Let $\eps: U^*(X) \to H^*(X)$ be the reduction map and let the Boardman map $\beta: U^*(X) \to H^*(X)[\mathbf t]$ define Gysin maps in ordinary cohomology by $\beta = \eps \circ s_{\mathbf t}$ and hence for a proper complex oriented map $f: Z \to X$: \[\beta(f_* z) = f_*(c_{\mathbf t}^H(\nu_f) \cdot \beta z).\] 
+\end{definition}
+
+\begin{definition}
+It follows that \[\beta e^U(\L) = \sum_{j \ge 0} t_j(e^J(\L))^{j+1}\] so setting \[\theta_{\mathbf t}(T) = \sum_{j \ge 0} t_j T^{j+1}\] we have \[(\beta \otimes^*)(\theta_{\mathbf t}(T_1), \theta_{\mathbf t}(T_2)) = \theta_{\mathbf t}(T_1 + T_2).\]  It further follows that there are ring homomorphisms
+\begin{center}
+\begin{tikzcd}
+L \arrow{r}{\delta} & U^*(*) \arrow{r}{\beta} & \Z[t] \\
+F_{univ} \arrow[|->]{r} & F \arrow[|->]{r} & \theta_{\mathbf t}^*(T_1 + T_2),
+\end{tikzcd}
+\end{center}
+where ``$\theta_{\mathbf t}^*$'' denotes conjugation by a power series.
+\end{definition}
+
+\begin{theorem}
+The homomorphism $\delta$ is an isomorphism and the homomorphism $\beta$ is injective.
+\end{theorem}
+\begin{proof}
+We know that $\delta$ is surjective by the arguments about the subring $C$.  On the other hand, the rational composite $\Q \otimes (\beta \circ \delta)$ induces an isomorphism $\Q \otimes L \to \Q[\mathbf t]$ using the logarithm.  By Lazard's theorem, $L$ is torsion-free, so $\beta \circ \delta$ is injective.  The conclusion follows.
+\end{proof}
+
 
 
 
