--- a/quillen.tex
+++ b/quillen.tex
@@ -145,7 +145,7 @@ c(\L_1 \otimes \L_2) & = 1 - \beta [\L_1 \otimes \L_2] = 1 - \beta^2 [\L_1] [\L_
 & = (1 - \beta[\L_1]) + (1 - \beta[\L_2]) - (1 - \beta[\L_1])(1 - \beta[\L_2]) \\
 & = c(\L_1) + c(\L_2) - c(\L_1) c(\L_2).
 \end{align*}
-In this coordinate on $\CP^\infty_{KU}$, the group law is then $x +_! y = x + y + xy$.
+In this coordinate on $\CP^\infty_{KU}$, the group law is then $x +_! y = x + y - xy$.\todo{This calculation is malformed.}
 \end{example}
 
 
@@ -689,58 +689,12 @@ where $p: E \to X$ is the projection and $E_0$ is the image of the zero section.
 
 The wrong--way maps come from conjugating by Poincar\'e duality: \[E^* X \cong E_{d_X-*} X \to E_{d_X-*} Y \cong E^*{*-d_X+d_Y} Y.\]  Poincar\'e duality comes from asserting that the stable normal bundle is oriented for the theory, and then Atiyah duality says \[D(X_+) \simeq \Susp^{-n} T(\nu) [\simeq T(\nu - n\eps) \simeq T(-\tau)]. \]
 
----
-
-Our first goal for today is to show the following freeness property of the ring spectrum $MO$:
-\begin{theorem}
-Let $E$ be a ring spectrum.  Homotopy classes of ring maps $MO \to E$ are in natural bijection with factorizations \[\S \to MO(1) \to E\] of the unit map for $E$. \qed
-\end{theorem}
-
-\noindent This proof falls into two halves, and one half is much easier than the other.  The data of a ring map $MO \to E$ appears to be considerly more data than a factorization, and showing that one begets the other turns out to be the easier direction of the proof.  Suppose that we're given such a ring map $MO \to E$, so that we can apply the Thom isomorphism machinery from the beginning of this story.  Then, recall the definition of $MO(1)$ as a Thom spectrum: \[MO(1) = T(\L - 1 \downarrow \RP^\infty).\]  Restricting the base space all the way to a point gives \[T(\L - 1 \downarrow *) = \S,\] and this fits into the following commutative diagram with the ring map we were given:
-\begin{center}
-\begin{tikzcd}
-\S \arrow{r} \arrow{d} & MO \arrow{d} \\
-MO(1) \arrow{ru} \arrow[densely dotted]{r} & E.
-\end{tikzcd}
-\end{center}
-The horizontal arrow across the top is the unit map for $MO$, so the long composite is the unit map for $E$, and the dotted composite is the desired factorization of the unit.  In terms of cohomology classes, the Thom isomorphism gives \[E^* \RP^\infty \cong \widetilde E^* MO(1).\]  The left--hand group has the canonical element ``$1$'', and the data of ``$\cong$'' is the Thom isomorphism, sending $1$ to a canonical map $MO(1) \to E$.  This, too, is the dotted arrow.\todo{Can this all be phrased more clearly?}
-
-Remembering that $MO(1) \simeq \Susp^{-1} \Susp^\infty \RP^\infty$, we see that this was what powered our computation of $H\F_2^* \RP^\infty$ from earlier, and in fact this map $MO(1) \to E$ is enough to deduce an Thom isomorphism in $E$--cohomology for $MO(1)$ alone.  The other direction of the proof then sounds more serious: we have to show that if we have a Thom isomorphism for the bundle involved in forming $MO(1)$, then we can extract from that compatible Thom isomorphisms for all bundles.  This kind of reduction is famous enough to have a name: it is called ``the splitting principle''.
-
 ------
 
-Q: Once you know that $MU$ has the universal formal group law on it, does the description of $MU_* MU$ follow immediately from evenness?  Probably?
+Q: Once you know that $MU$ has the universal formal group law on it, does the description of $MU_* MU$ follow immediately from evenness?  Probably?\todo{No, it follows from \emph{freeness}, and this should go into the operations/model section.}
 
---- here's some of the real proof ---
-
-Need to talk about power operations and the construction of the Steenrod operations for a sufficiently geometric cohomology theory
+-----
 
 Need to talk about Gysin pushforwards in complex bordism and in ordinary cohomology.  Compare these with the theory of Thom isomorphism in general.  They're equivalent, right?  A complex orientation makes proper maps induce shriek maps, and shriek maps can be used to deduce what Chern classes are by push-pull: if $\zeta: X \to E$ is the zero section of a complex bundle $\xi$, then $e(\xi) = i^* i_*(1)$ I think.
 
 
-\begin{definition}(6.2)
-Let $\eps: U^*(X) \to H^*(X)$ be the reduction map and let the Boardman map $\beta: U^*(X) \to H^*(X)[\mathbf t]$ define Gysin maps in ordinary cohomology by $\beta = \eps \circ s_{\mathbf t}$ and hence for a proper complex oriented map $f: Z \to X$: \[\beta(f_* z) = f_*(c_{\mathbf t}^H(\nu_f) \cdot \beta z).\] 
-\end{definition}
-
-\begin{definition}
-It follows that \[\beta e^U(\L) = \sum_{j \ge 0} t_j(e^J(\L))^{j+1}\] so setting \[\theta_{\mathbf t}(T) = \sum_{j \ge 0} t_j T^{j+1}\] we have \[(\beta \otimes^*)(\theta_{\mathbf t}(T_1), \theta_{\mathbf t}(T_2)) = \theta_{\mathbf t}(T_1 + T_2).\]  It further follows that there are ring homomorphisms
-\begin{center}
-\begin{tikzcd}
-L \arrow{r}{\delta} & U^*(*) \arrow{r}{\beta} & \Z[t] \\
-F_{univ} \arrow[|->]{r} & F \arrow[|->]{r} & \theta_{\mathbf t}^*(T_1 + T_2),
-\end{tikzcd}
-\end{center}
-where ``$\theta_{\mathbf t}^*$'' denotes conjugation by a power series.
-\end{definition}
-
-\begin{theorem}
-The homomorphism $\delta$ is an isomorphism and the homomorphism $\beta$ is injective.
-\end{theorem}
-\begin{proof}
-We know that $\delta$ is surjective by the arguments about the subring $C$.  On the other hand, the rational composite $\Q \otimes (\beta \circ \delta)$ induces an isomorphism $\Q \otimes L \to \Q[\mathbf t]$ using the logarithm.  By Lazard's theorem, $L$ is torsion-free, so $\beta \circ \delta$ is injective.  The conclusion follows.
-\end{proof}
-
-
-\section*{Lazard's theorem}
-
-This should have a clever ``The structure of $\moduli{fg}$'' name.
