records some input nonsense about the sigma-orientation which will eventually be useful

--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,7 @@
 \newcommand{\m}{m}
 \renewcommand{\O}{\mathcal O}
 \renewcommand{\t}{\mathbf t}
+\newcommand{\Gm}{\mathbb G_m}
 
 \newcommand{\<}{\langle}
 \renewcommand{\>}{\rangle}
@@ -61,6 +62,7 @@
 \newcommand{\into}{\hookrightarrow}
 \newcommand{\cotensor}{\square}
 \renewcommand{\th}{\textsuperscript{th}}
+\newcommand{\from}{\leftarrow}
 
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
 \newcommand{\CatOf}[1]{\mathsf{#1}}
@@ -102,6 +104,7 @@
 \DeclareMathOperator{\Cotor}{Cotor}
 \DeclareMathOperator{\coker}{coker}
 \DeclareMathOperator{\Hom}{Hom}
+\DeclareMathOperator{\Weil}{Weil}
 
 \numberwithin{equation}{section}
 
