--- a/quillen.tex
+++ b/quillen.tex
@@ -181,7 +181,7 @@ Today won't really involve any algebraic topology.  Instead, we are going to tal
 \item $\zeta: X \to C$ is a distinguished point on $C$.
 \end{itemize}
 
-Recall that yesterday we defined what it meant for a subscheme to be closed.  The notion of a divisor on a formal curve is a particular sort of closed subscheme:
+Recall that yesterday we defined what it meant for a subscheme to be closed.  \todo{Section 2.4.2 of the AHS preprint treats divisors in more generality. This might make the tail of this section smoother, in trade for having to specialize at the beginning.}  The notion of a divisor on a formal curve is a particular sort of closed subscheme:
 
 \begin{definition}
 An \textit{effective Weil divisor} of rank $n$ on $C$ is an $X$--subscheme of $C$ whose ring of functions is rank $n$ as an $\sheaf{O}_X$--module.
