--- a/finite.tex
+++ b/finite.tex
@@ -230,6 +230,10 @@ Every skew field spectrum is a wedge of $K(n)$s
 
 Definitions of Morava $K$-- and $E$--theory
 
+\begin{remark}
+Morava $K$--theory at the even prime is not commutative.\todo{cf.\ Section 5.2 of KLW.}
+\end{remark}
+
 Yesterday, we developed a rich target for $T(J)$--homology: sheaves over an algebro-geometric object $\M_{T(J)}$.  Furthermore, Quillen's theorem gave an identification $\M_{T(J)} \simeq \moduli{fg}$.  Our initial goal for today is to outline a program by which we can leverage this to study $T(J)$.  Abstractly, one can hope to study any sheaf, including $\M_{T(J)}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of $\M_{T(J)}$, so that we can determine where to even look for those stalks.
 
 With this in mind, given a map \[\Spec R \xrightarrow{f} \moduli{fg},\] life would be easiest if the $R$--module determined by $f^* \M_{T(J)}(X)$ were itself the value of a homology theory $R_*(X) = T(J)_* X \otimes_{T(J)_*} R$.  After all, the pullback of some arbitrary sheaf along some arbitrary map has no special behavior, but homology functors do have familiar special behaviors which we could hope to exploit.  Generally, this is unreasonable to expect: homology theories are functors which convert cofiber sequences of spectra to long exact sequences of groups, but base--change from $\moduli{fg}$ to $\Spec R$ preserves exact sequences exactly when $f$ is \textit{flat}.  In that case, this gives the following theorem:
