--- a/sigma.tex
+++ b/sigma.tex
@@ -85,13 +85,17 @@ The value $\lambda$ can be taken to be $\pm 1$ in \Cref{EasyCompatibilityWithdn}
 The following square commutes (up to sign):
 \begin{center}
 \begin{tikzcd}
-BU[6, \infty)^E \arrow{r} \arrow{d}{\Pi_3} & K(\Z, 3)^E \arrow{d} \\
+BU[6, \infty)^E \arrow{r}{\gamma^E} \arrow{d}{\Pi_3} & K(\Z, 3)^E \arrow{d} \\
 C^3(\CP^\infty_E; \mathbb G_m) \arrow{r}{e} & \Weil(\CP^\infty_E).
 \end{tikzcd}
 \end{center}
 \end{corollary}
 \begin{proof}
-\todo{Include this. It will require you to set up some Weil pairing machinery.}
+We will check compatibility on $\Weil_n(\CP^\infty_E)$ for arbitrary $n$.  (Note: the sign can't bounce with $n$ because $\CP^\infty_E$ is $p$--divisible.)  Since $\Weil_n(\CP^\infty_E)$ is a subscheme of $\underline{\smash{\operatorname{Maps}}}(\CP^\infty_E[n]^{\times 2}, \Gm)$, we can push forward to checking equality here, i.e., of the two maps \[\CP^\infty_E[n]^{\times 2} \times BU[6, \infty)^E \to \Gm.\]
+
+The construction of adjoint elements from maps of spectra converts sums to products and is natural in the source spectrum.  Writing $z = \prod_{i=1}^3 (1 - \L_i) \in kU^6 (\CP^\infty)^{\times 3}$, it follows that the adjoint map $\hat z$ is given by the composite \[\hat z \co (\CP^\infty_E)^{\times 3} \times BU[6, \infty)^E \to (\CP^\infty_E)^{\times 3} \times C^3(\CP^\infty_E; \Gm) \xrightarrow{\operatorname{eval}} \Gm.\]  It follows by naturality that if $z = (1 - \L_1)(1 - \L_1^k)(1 - \L_2) \in kU^6 (\CP^\infty)^{\times 2}$, then $\hat z$ corresponds to the map \[\hat z \co (g_1, g_2, f) \mapsto f(g_1, kg_1, g_2),\] and continuing along these lines we see \[d_n(\L_1, \L_2)\hat{} \co (g_1, g_2, f) \mapsto \prod_{k=1}^{n-1} \frac{f(g_1, kg_1, g_2)}{f(g_1, kg_2, g_2)} = e_n(f)(g_0, g_1).\]
+
+That described the bottom-left arm of the square.  For the other arm, take $w = \beta \circ \mu \in H^3(B\Z/p^j)^{\times 2}$ with adjoint $\hat w \co \CP^\infty_E[p^j]^{\times 2} \times K(\Z, 3)^E \to \Gm$.  Naturality shows $\hat w \circ \gamma^E = \widehat{\gamma_* w}$, and the theorem shows $\gamma_* w = \pm d_n(\L_1, \L_2)$, hence $\widehat{\gamma_* w} = (\pm d_n(\L_1, \L_2))\hat{}$, which is adjoint to $(e_n \Pi_3)^\pm$.
 \end{proof}
 
 \begin{lemma}\citeme{AS Lemma 6.1}
