introduce some nice macros for internal hom objects

--- a/quillen.tex
+++ b/quillen.tex
@@ -265,10 +265,10 @@ Let $x$ be a coordinate on $C$ and let $f$ be an invertible element of $\sheaf M
 
 \begin{lemma}
 \todo{This is Prop 5.26 in FSFG.}
-In the case of a formal curve $C$, there is a short exact sequence of formal groups \[0 \to \underline{\CatOf{FormalSchemes}}(C, \mathbb G_m) \to \operatorname{Mer}(C, \mathbb G_m) \to \Div(C) \to 0.\]
+In the case of a formal curve $C$, there is a short exact sequence of formal groups \[0 \to \InternalHom{FormalSchemes}(C, \mathbb G_m) \to \operatorname{Mer}(C, \mathbb G_m) \to \Div(C) \to 0.\]
 \end{lemma}
 \begin{proof}
-One first checks that it suffices to invert \emph{any} one coordinate in forming $\sheaf{M}_C$ and the rest automatically become inverted.  The above lemma gives a decomposition \[\operatorname{Mer}(C, \mathbb G_m) \cong \underline{\CatOf{FormalSchemes}}(C, \mathbb G_m) \times \underline{\Z} \times Y,\] where $Y$ selects the series $g$.  For $f(x) \in \sheaf O_{C \times_X \Spec R}$ so that $\sheaf O_{C \times_X \Spec R} / f$ is free of rank $n$ over $R$, we set $\div(f)$ to be the associated divisor, and we extend to fractions by $\div(f/g) = \div(f) - \div(g)$.  This map has kernel $\underline{\CatOf{FormalSchemes}}(C, \mathbb G_m)$.
+One first checks that it suffices to invert \emph{any} one coordinate in forming $\sheaf{M}_C$ and the rest automatically become inverted.  The above lemma gives a decomposition \[\operatorname{Mer}(C, \mathbb G_m) \cong \InternalHom{FormalSchemes}(C, \mathbb G_m) \times \underline{\Z} \times Y,\] where $Y$ selects the series $g$.  For $f(x) \in \sheaf O_{C \times_X \Spec R}$ so that $\sheaf O_{C \times_X \Spec R} / f$ is free of rank $n$ over $R$, we set $\div(f)$ to be the associated divisor, and we extend to fractions by $\div(f/g) = \div(f) - \div(g)$.  This map has kernel $\InternalHom{FormalSchemes}(C, \mathbb G_m)$.
 
 Now let $j: C \to \Div C$ be the usual inclusion, and for a point $a \in C(R)$ set $\sigma(a) = x - x(a) = x(1 - x(a)/x) \in \operatorname{Mer}(C, \mathbb G_m)(R)$.  This gives a map $\sigma: C \to \operatorname{Mer}(C, \mathbb G_m)$ satisfying $\div \circ \sigma = j$.  There is also an extension \[ \tau: \Div C \to \operatorname{Mer}(C, \mathbb G_m),\] and one checks $\tau \circ j = \sigma$.  It follows that $\div \circ \tau \circ j = j$ and thus $\div \circ \tau = 1$.  So, the sequence is split exact, though the formula for the splitting (and only the splitting) involved the coordinate $x$.
 \end{proof}
