--- a/sigma.tex
+++ b/sigma.tex
@@ -85,13 +85,13 @@ The value $\lambda$ can be taken to be $\pm 1$ in \Cref{EasyCompatibilityWithdn}
 The following square commutes (up to sign):
 \begin{center}
 \begin{tikzcd}
-BU[6, \infty)^E \arrow{r}{\gamma^E} \arrow{d}{\Pi_3} & K(\Z, 3)^E \arrow{d} \\
+BU[6, \infty)^E \arrow{r}{\gamma^E} \arrow{d}{\Pi_3} & K(\Z, 3)^E \arrow{d}{b_*} \\
 C^3(\CP^\infty_E; \mathbb G_m) \arrow{r}{e} & \Weil(\CP^\infty_E).
 \end{tikzcd}
 \end{center}
 \end{corollary}
 \begin{proof}
-We will check compatibility on $\Weil_n(\CP^\infty_E)$ for arbitrary $n$.  (Note: the sign can't bounce with $n$ because $\CP^\infty_E$ is $p$--divisible.)  Since $\Weil_n(\CP^\infty_E)$ is a subscheme of $\underline{\smash{\operatorname{Maps}}}(\CP^\infty_E[n]^{\times 2}, \Gm)$, we can push forward to checking equality here, i.e., of the two maps \[\CP^\infty_E[n]^{\times 2} \times BU[6, \infty)^E \to \Gm.\]
+We will check compatibility on $\Weil_n(\CP^\infty_E)$ for arbitrary $n$.  (Note: the sign can't bounce with $n$ because $\CP^\infty_E$ is $p$--divisible.)  Since $\Weil_n(\CP^\infty_E)$ is a subscheme of $\InternalHom{FormalSchemes}(\CP^\infty_E[n]^{\times 2}, \Gm)$, we can push forward to checking equality here, i.e., of the two maps \[\CP^\infty_E[n]^{\times 2} \times BU[6, \infty)^E \to \Gm.\]
 
 The construction of adjoint elements from maps of spectra converts sums to products and is natural in the source spectrum.  Writing $z = \prod_{i=1}^3 (1 - \L_i) \in kU^6 (\CP^\infty)^{\times 3}$, it follows that the adjoint map $\hat z$ is given by the composite \[\hat z \co (\CP^\infty_E)^{\times 3} \times BU[6, \infty)^E \to (\CP^\infty_E)^{\times 3} \times C^3(\CP^\infty_E; \Gm) \xrightarrow{\operatorname{eval}} \Gm.\]  It follows by naturality that if $z = (1 - \L_1)(1 - \L_1^k)(1 - \L_2) \in kU^6 (\CP^\infty)^{\times 2}$, then $\hat z$ corresponds to the map \[\hat z \co (g_1, g_2, f) \mapsto f(g_1, kg_1, g_2),\] and continuing along these lines we see \[d_n(\L_1, \L_2)\hat{} \co (g_1, g_2, f) \mapsto \prod_{k=1}^{n-1} \frac{f(g_1, kg_1, g_2)}{f(g_1, kg_2, g_2)} = e_n(f)(g_0, g_1).\]
 
@@ -108,10 +108,10 @@ There is a topological splitting $BU \simeq BSU \times \CP^\infty$ using the det
 \todo[inline]{There's a nice construction of the $\Pi_k$ maps in the AHS preprint where the ``$C_k$'' constructions are performed directly on the spectra, then applying $(-)_E$ carries those constructions to relevant constructions on group schemes, and finally Cartier duality gives the maps $\Pi_k$ of the sort described above.  This is superior to saying ``adjoint'', in my opinion, though it could be remarked that these are equivalent.}
 
 \begin{lemma}\citeme{Lemma 6.2 of AS}
-The adjoint of the map $E_0 \CP^\infty \to E_0 BU$ induces a map $\Pi_1: BU^E \to C^1(\CP^\infty_E; \mathbb G_m)$ which is an isomorphism.  In fact, the Cartier duality isomorphism $(\CP^\infty)^E \cong \underline{\Hom}(\CP^\infty_E, \mathbb G_m)$ fits into a commuting square
+The adjoint of the map $E_0 \CP^\infty \to E_0 BU$ induces a map $\Pi_1: BU^E \to C^1(\CP^\infty_E; \mathbb G_m)$ which is an isomorphism.  In fact, the Cartier duality isomorphism $(\CP^\infty)^E \cong \InternalHom{FormalGroups}(\CP^\infty_E, \mathbb G_m)$ fits into a commuting square
 \begin{center}
 \begin{tikzcd}
-(\CP^\infty)^E \arrow{r} \arrow{d} & \underline{\Hom}(\CP^\infty_E, \Gm) \arrow{d}{\begin{array}{c} \text{natural} \\ \text{inclusion} \end{array}} \\
+(\CP^\infty)^E \arrow{r} \arrow{d} & \InternalHom{FormalGroups}(\CP^\infty_E, \Gm) \arrow{d}{\begin{array}{c} \text{natural} \\ \text{inclusion} \end{array}} \\
 BU^E \arrow{r}{\Pi_1} & C^1(\CP^\infty_E; \Gm).
 \end{tikzcd}
 \end{center}
@@ -139,7 +139,7 @@ The following is a map of short exact sequences:
 \begin{center}
 \begin{tikzcd}
 0 \arrow{r} & (\CP^\infty)^E \arrow{d} \arrow{r} & BU^E \arrow{r} \arrow{d} & BSU^E \arrow{r} \arrow{d} & 0 \\
-0 \arrow{r} & \underline{\Hom}(\CP^\infty_E; \Gm) \arrow{r} & C^1(\CP^\infty; \Gm) \arrow{r} & C^2(\CP^\infty; \Gm) \arrow{r} & 0.
+0 \arrow{r} & \InternalHom{FormalGroups}(\CP^\infty_E; \Gm) \arrow{r} & C^1(\CP^\infty; \Gm) \arrow{r} & C^2(\CP^\infty; \Gm) \arrow{r} & 0.
 \end{tikzcd}
 \end{center}
 \end{theorem}
