remove the title, realign some arrows in the introduction

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 \usepackage{todonotes}
 \usepackage{lscape}
 \usepackage{rotating}
+\usepackage{mathtools}
 
 \usepackage{cleveref}
 \usepackage{tocloft,calc}
@@ -127,7 +128,7 @@
 \crefname{section}{lecture}{lectures} \Crefname{section}{Lecture}{Lectures}
 \crefname{chapter}{case study}{case studies} \Crefname{chapter}{Case Study}{Case Studies}
 
-\title{Formal Geometry in Algebraic Topology}
+\title{Untitled book project}
 \author{Eric Peterson}
 
 \begin{document}
