--- a/intro.tex
+++ b/intro.tex
@@ -14,7 +14,14 @@ However, having maps of homology theories (rather than just maps of coefficient 
 MSO_n K(\Z, n) & = \left\{ \text{oriented $n$--manifolds mapping to $K(\Z, n)$} \right\} / \sim \\
 & = \left\{ \begin{array}{c}\text{oriented $n$--manifolds $M$} \\ \text{with a specified class $\omega \in H^n(M; \Z)$} \end{array}\right\} / \sim.
 \end{align*}
-The yoga of stable homotopy theory then allows us to build a composite \[\S^0 \xrightarrow{(M, \omega)} MSO \sm (\S^{-n} \sm \Susp^\infty_+ K(\Z, n)) \to MSO \sm H\Z \xrightarrow{\phi \sm 1} H\Z \sm H\Z \xrightarrow\mu H\Z,\] where $\phi$ is the orientation map, and this gives us an integer. This integer is $\int_M \omega$, and it comes equipped with a Stokes' theorem due to the relation ``$\sim$'', and we can begin to see what the techniques of stable homotopy theory have to offer.
+The yoga of stable homotopy theory then allows us to build a composite
+\begin{align*}
+\S^0 & \xrightarrow{\mathmakebox[2.5em]{(M, \omega)}} MSO \sm (\S^{-n} \sm \Susp^\infty_+ K(\Z, n)) \\ 
+& \xrightarrow{\mathmakebox[2.5em]{\phantom{\phi}}} MSO \sm H\Z \\
+& \xrightarrow{\mathmakebox[2.5em]{\phi \sm 1}} H\Z \sm H\Z \\
+& \xrightarrow{\mathmakebox[2.5em]{\mu}} H\Z,
+\end{align*}
+where $\phi$ is the orientation map, and this gives us an integer. This integer is $\int_M \omega$, and it comes equipped with a Stokes' theorem due to the relation ``$\sim$'', and we can begin to see what the techniques of stable homotopy theory have to offer.
 
 Now take $X = e$ to be the trivial structure group, so that the Pontryagin--Thom construction gives an equivalence $Me \xrightarrow{\simeq} \S$.  It is thus possible (and some people have indeed taken up this viewpoint) that stable homotopy theory can be done solely through the lens of ``framed bordism''. I'm a stable homotopy theorist rather than a differential topologist, and so I prefer to view this the other way: the sphere spectrum $\S$ often appears in my life as a natural object, and I will sometimes replace it by $Me$, the framed bordism spectrum.  For example, often I encounter a ring spectrum $E$, and it comes equipped with a unit map $\S \to E$, which I can reconsider as a ring map $\S = Me \to E$.  Following along the lines of the previous paragraph, we learn that we can thus think of any ring spectrum $E$ as automatically equipped with a theory of integration for framed manifolds.
 
