some reorganization of the cooperations section

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -2,36 +2,63 @@
 
 \chapter{Unstable cooperations}
 
+\todo{Write an introduction for me.}
 
-\section{The Ravenel-Wilson calculations}
+
+
+
+
+\todo[inline]{This section can probably be introduced as trying to enrich the notion of a context for cohomology theories swallowing \emph{spaces}.  The stable cooperations are totally captured by the notion of a context, but there are two approaches to (distinct sorts of) unstable operations: Hopf rings and power operations.  We plan on talking about both (and they both have something to say about $MU\<6\>$), so this can be a common thread.}
+
+
+
+\section{Coalgebraic formal schemes}
+
+Hopf rings
+
+The bar spectral sequence
+
+Cartier duality
+
+
+
+\section{Global cooperations}
+
+The Ravenel--Wilson calculation of $E_* \OS{MU}{*}$ for complex orientable $E$
+
+
+
+
+
+\section{Cooperations between theories at geometric points}
+
+$BS^1[p^j]_{K(n)} = BS^1_{K(n)}[p^j]$
+
+The Ravenel--Wilson calculation of $K(n)_* \OS{Hk}{*} = \Alt^* BS^1_{K(n)}[p] \otimes_{\F_p} k$
+
+
 
 \section{Dieudonn\'e modules}
 
-\section{Coalgebraic formal schemes}
+The practical approach: projective generators of finite Hopf algebras
+
+The de Rham crystal of a formal group
+
+Goerss's result on $H_* \OS{E}{*}$ for Landweber flat $E$
 
 
 
 
 \section*{Things that belong in this section}
 
-$BS^1[p^j]_{K(n)} = BS^1_{K(n)}[p^j]$
+Theorem 6.1 of R--W \textit{The Hopf ring for complex bordism} sounds like something related to Quillen's elementary proof.
 
-Coalgebraic rings and ring-valued affine schemes
+Section III.11 of Wilson's \textit{Primer} has a synopsis of how additive unstable operations should be treated.  (In particular, he remarks on pp.\ 62-3 that primitives in unstable operations are the \emph{additive} unstable operations, which seems important.)  Possibly this is enough to understand how additive unstable cooperations should be treated, or maybe unstable cooperations generally.
 
-The bar spectral sequence, naturality
+There's also a document by Boardman, Johnson, and Wilson (Chapter 2 of the \textit{Handbook of Algebraic Topology}) that discusses an equivalence between Steve's approach and ``unstable comodules''.  Please read this.
 
-$K(n)_* K(\Z/p^j, q) = \operatorname{Alt}^q BS^1_{K(n)}[p^j]$
 
-The calculation of the Hopf ring $H_* MU_*$
 
-Goerss's result on $H_* E_*$ for Landweber flat $E$
 
-Ravenel--Wilson on $MU_* \OS{MU}{*}$ and $H_* \OS{MU}{*}$
 
-Curves on a formal group
 
-The de Rham crystal of a formal group
-
-The practical approach: projective generators of finite Hopf algebras
-
-Cartier duality
