--- a/sigma.tex
+++ b/sigma.tex
@@ -220,7 +220,7 @@ Ordinary $K$--theory with the curve $zy^2 + zxy = x^3$.
 Tate $K$--theory
 \end{example}
 
-\todo[inline]{I want to sketch the reduction for even-periodic elliptic cohomology theories to the case of $MUP$, then from there to $HkP$ for the prime fields $K$, then from there to questions about additive cocycles.  We certainly don't need to recall any of these calculations, but I think it's a nice example of the philosophy that the additive formal group is such a knotted point of $\moduli{fg}$ that it suffices to check something there to learn it for the rest of the stack.  This survives in the published form of AHS, but it's stated pretty clearly as Prop 3.4 in the unpublished verison.}
+\todo[inline]{I want to sketch the reduction for even-periodic elliptic cohomology theories to the case of $MUP$, then from there to $HkP$ for the prime fields $K$, then from there to questions about additive cocycles.  We certainly don't need to recall any of these calculations, but I think it's a nice example of the philosophy that the additive formal group is such a knotted point of $\moduli{fg}$ that it suffices to check something there to learn it for the rest of the stack.  This survives in the published form of AHS, but it's stated pretty clearly as Prop 3.4 in the unpublished verison.  See also 5.12 of the unpublished version.}
 
 \todo[inline]{From the intro to the AHS preprint: For any lattice $\Lambda \subseteq \C$, we get a map $\Phi: MU[6, \infty) \to HP_\Lambda$ which sends $(2n)$--dimensional bordism classes $M$ to numbers $\Phi(M; \Lambda) \cdot u_{\Lambda}^n$. Suppose $\Lambda$ and $\Lambda'$ are two lattices with $\lambda \cdot \Lambda = \Lambda'$. This induces a map $HP_{\Lambda'} \to HP_\Lambda$ which intertwines the maps $\Phi$ by $\Phi(M; \lambda \cdot \Lambda) = \lambda^{-n} \Phi(M; \Lambda)$.  The usual appearance of a modular form (via $SL_2$ invariance) can be extracted from the top of page 5, if you want.  You can also show that this ``functional equation for a modular form'' is actually realized by a function by considering the elliptic cohomology theory built out of the bundle of elliptic curves $\mathfrak h \times \C/(1, \tau) \to \mathfrak h$ and the ordinary coefficient ring $\sheaf O[u^\pm]$, $\sheaf O$ the ring of holomorphic functions on $\mathfrak h$.}
 
