record one of danny’s concerns

--- a/quillen.tex
+++ b/quillen.tex
@@ -538,6 +538,8 @@ The chain model for ordinary homology is actually rigid enough to define power o
 
 \section{Feb 19: Quillen's theorem}
 
+\todo{Danny pointed out that this is a little confused about fixed points versus orbits and homotopy vs genuine.  Make sure this is straightened out.}
+
 Our goal today is to apply a version of \Cref{PushPullFormulaForMU} to the push-pull definition of the power operation for $MU$ given in \Cref{DefnPowerOperationForMU}.  The relevant Cartesian square in that case has the form
 \begin{center}
 \begin{tikzcd}
