some reorganization in chapter 3

--- a/mo.tex
+++ b/mo.tex
@@ -275,7 +275,7 @@ Finally, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that 
 
 
 
-\section{Feb 3: Comodule cohomology I: Group cohomology}
+\section{Feb 3: Hopf algebra cohomology}
 
 \todo{This section is written gradedly and probably shouldn't be, for consistency.} Today we'll focus on an important classical tool: the Adams spectral sequence.  We're going to study this in greater earnest later on, so I will avoid giving a satisfying construction today.  But, even without a construction, it's instructive to see how such a thing comes about.  \todo{I first saw this presentation from Matt Ando. He must have learned it from someone. I'd like to know who to attribute this to.}  Begin by considering the following three self-maps of the stable sphere:
 \begin{align*}
