adds a date counter for eventually automating the section header production

--- a/main.tex
+++ b/main.tex
@@ -132,6 +132,100 @@
 \title{Untitled book project}
 \author{Eric Peterson}
 
+\newcounter{whichdate}
+\setcounter{whichdate}{0}
+\newcommand{\nextdate}{
+\addtocounter{whichdate}{1}
+\ifnum\value{whichdate}=1%
+  Jan 25\fi%
+\ifnum\value{whichdate}=2%
+  Jan 27\fi%
+\ifnum\value{whichdate}=3%
+Jan 29\fi%
+\ifnum\value{whichdate}=4%
+Feb 1\fi%
+\ifnum\value{whichdate}=5%
+Feb 3\fi%
+\ifnum\value{whichdate}=6%
+Feb 5\fi%
+\ifnum\value{whichdate}=7%
+Feb 8\fi%
+\ifnum\value{whichdate}=8%
+Feb 10\fi%
+\ifnum\value{whichdate}=9%
+Feb 12\fi%
+\ifnum\value{whichdate}=10%
+Feb 17\fi%
+\ifnum\value{whichdate}=11%
+Feb 19\fi%
+\ifnum\value{whichdate}=12%
+Feb 22\fi%
+\ifnum\value{whichdate}=13%
+Feb 24\fi%
+\ifnum\value{whichdate}=14%
+Feb 26\fi%
+\ifnum\value{whichdate}=15%
+Feb 28\fi%
+\ifnum\value{whichdate}=16%
+Mar 2\fi%
+\ifnum\value{whichdate}=17%
+Mar 4\fi%
+\ifnum\value{whichdate}=18%
+Mar 7\fi%
+\ifnum\value{whichdate}=19%
+Mar 9\fi%
+\ifnum\value{whichdate}=20%
+Mar 11\fi%
+\ifnum\value{whichdate}=21%
+Mar 21\fi%
+\ifnum\value{whichdate}=22%
+Mar 23\fi%
+\ifnum\value{whichdate}=23%
+Mar 25\fi%
+\ifnum\value{whichdate}=24%
+Mar 28\fi%
+\ifnum\value{whichdate}=25%
+Mar 30\fi%
+\ifnum\value{whichdate}=26%
+Apr 1\fi%
+\ifnum\value{whichdate}=27%
+Apr 4\fi%
+\ifnum\value{whichdate}=28%
+Apr 6\fi%
+\ifnum\value{whichdate}=29%
+Apr 8\fi%
+\ifnum\value{whichdate}=30%
+Apr 11\fi%
+\ifnum\value{whichdate}=31%
+Apr 13\fi%
+\ifnum\value{whichdate}=32%
+Apr 15\fi%
+\ifnum\value{whichdate}=33%
+Apr 18\fi%
+\ifnum\value{whichdate}=34%
+Apr 20\fi%
+\ifnum\value{whichdate}=35%
+Apr 22\fi%
+\ifnum\value{whichdate}=36%
+Apr 25\fi%
+\ifnum\value{whichdate}=37%
+Apr 27\fi%
+\ifnum\value{whichdate}=38%
+Apr 29\fi%
+\ifnum\value{whichdate}=39%
+May 2\fi%
+\ifnum\value{whichdate}=40%
+May 4\fi%
+\ifnum\value{whichdate}>40%
+PAST END\fi%
+}
+
+
+
+
+
+
+
 \begin{document}
 
 \frontmatter
