--- a/preface.tex
+++ b/preface.tex
@@ -4,6 +4,12 @@
 
 Matthew Ando, Michael Hopkins, Neil Strickland, Constantin Teleman
 
+Haynes Miller, Doug Ravenel, Steve Wilson
+
+Jack Morava
+
+
+
 Hisham Sati: the \textit{Flavors of Cohomology} workshop
 
 Berkeley students: Hood Chatham and Geoffrey Lee, Catherine Ray
