corrects an error at the end of Lecture 1.5

--- a/mo.tex
+++ b/mo.tex
@@ -504,7 +504,7 @@ We have a $\pi_*$--injection $MO \to H\F_2 \sm MO$.  Pick an $\F_2$--basis $\{v_
 \end{proof}
 
 \begin{remark}
-Properly speaking, we could have deduced this Corollary long ago, just by knowing that $\pi_* MO$ is bounded below and an $\F_2$--vector space.  What we really gained by going through this section is an actual count of where the summands occur and in what amounts.
+Just using that $\pi_* MO$ is connective and $\pi_0 MO = \F_2$, we can produce a ring spectrum map $MO \to H\F_2$.  What we've learned is that this map has a splitting: $MO$ is also an $H\F_2$--algebra.
 \end{remark}
 
 \todo{Should you eventually mention the stable cooperations $MO^{MO}$?  Rather than coming with a specified logarithm, it's an isomorphism between any pair of additive formal groups --- or, I suppose, a pair of logarithms.}
