auto-attaches class dates to section titles (thanks, hood)

--- a/class-info.tex
+++ b/class-info.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\section*{Class information}
+\subsection*{Class information}
 
 \vspace{2\baselineskip} \noindent \textit{Meeting times: }
 Spring 2016, MWF 12pm--1pm.
