--- a/finite.tex
+++ b/finite.tex
@@ -10,7 +10,7 @@
 still need to talk about closed and open subschemes, their basic properties
 
 
-\section{Feb 22: The context of a spectrum}
+\section{The context of a spectrum}
 
 Today we will begin to make good on our promise, made during our investigation of the unoriented bordism ring, to explain where the Adams spectral sequence comes from.  This story neatly divides into two parts, and the first half is just an investigation of how rich of an algebraic category $\CatOf{C}$ we can find that supports a factorization
 % \begin{center}
@@ -107,7 +107,7 @@ The $E$-Adams spectral sequence: you owe them this from lecture 1.4
 
 
 
-\section{Feb 24: The structure of $\moduli{fg}$ I: Large scales}
+\section{The structure of $\moduli{fg}$ I: Large scales}
 
 \needproof{$MU_* MU$ is universal for FGL isomorphisms}
 
@@ -200,7 +200,7 @@ We know that $\delta$ is surjective by the arguments about the subring $C$.  On 
 
 
 
-\section{Feb 26: The structure of $\moduli{fg}$ II: Small scales}
+\section{The structure of $\moduli{fg}$ II: Small scales}
 
 In this lecture:
 
@@ -265,7 +265,7 @@ Talk about this $B\G$ thing as a simplicial scheme. That's what it is.
 
 
 
-\section{Feb 29: Nilpotence and periodicity}
+\section{Nilpotence and periodicity}
 
 Every skew field spectrum is a wedge of $K(n)$s
 
@@ -401,7 +401,7 @@ In fact, our favorite functor\footnote{However, this functor is \emph{not} a map
 
 
 
-\section{Mar 2: Chromatic localizations}
+\section{Chromatic localizations}
 
 Proof of chromatic fracture
 
