--- a/intro.tex
+++ b/intro.tex
@@ -3,7 +3,7 @@
 \setcounter{chapter}{-1}
 \chapter{Introduction}
 
-\section{Jan 25: Introduction}\label{IntroductionSection}
+\section{Introduction}\label{IntroductionSection}
 
 The goal of this class is to communicate a certain \textit{weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal just for today is to tell a story about one theorem where it is especially apparent.
 
