--- a/mo.tex
+++ b/mo.tex
@@ -6,7 +6,7 @@
 \todo{Write an introduction for me.}
 
 
-\section{Jan 27: Thom spectra and the Thom isomorphism}\label{LectureThomSpectra}
+\section{Thom spectra and the Thom isomorphism}\label{LectureThomSpectra}
 
 Our first case study is a sequence of theorems about the unoriented bordism spectrum $MO$.  I wanted to begin by recalling one definition of the spectrum $MO$, since it involves ideas that will be useful to us throughout the semester.
 
@@ -101,7 +101,7 @@ This powers an induction that shows that $H\Z/2_* \RP^\infty$ has a single class
 
 
 
-\section{Jan 29: Cohomology rings and affine schemes}
+\section{Cohomology rings and affine schemes}
 
 \todo{Decide on $\Z/2$ versus $\F_2$. I think in the previous lecture you were avoiding $\F_2$ because it got in the way of your homology subscripts.}An abbreviated summary of this semester is that we're going to put ``$\Spec$'' in front of rings appearing in algebraic topology and see what happens.  Before doing any algebraic topology, let me remind you what this means on the level of algebra.  The core idea is to replace a ring $R$ by the functor it corepresents.  For any ``test $\F_2$--algebra'' $T$, we set \[\Spec(R)(T) := \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec R) := \CatOf{Algebras}_{\F_2/}(R, T).\]  More generally, we have the following definition:
 \begin{definition}
@@ -187,7 +187,7 @@ and hence it takes the form \[\Delta(x) = x_1 + x_2.\]  Noticing that this is ex
 
 
 
-\section{Feb 1: The Steenrod algebra}
+\section{The Steenrod algebra}
 \label{TheSteenrodAlgebraSection}
 
 
@@ -275,7 +275,7 @@ Finally, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that 
 
 
 
-\section{Feb 3: Hopf algebra cohomology}
+\section{Hopf algebra cohomology}
 
 \todo{This section is written gradedly and probably shouldn't be, for consistency.} Today we'll focus on an important classical tool: the Adams spectral sequence.  We're going to study this in greater earnest later on, so I will avoid giving a satisfying construction today.  But, even without a construction, it's instructive to see how such a thing comes about.  \todo{I first saw this presentation from Matt Ando. He must have learned it from someone. I'd like to know who to attribute this to.}  Begin by considering the following three self-maps of the stable sphere:
 \begin{align*}
@@ -396,7 +396,7 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$. \to
 
 
 
-\section{Feb 5: The unoriented bordism ring}
+\section{The unoriented bordism ring}
 
 Our goal today is to use the results of the previous lectures to make a calculation of $\pi_* MO$, the unoriented bordism ring.  The Adams spectral sequence converging to this has signature \[H^*_{\mathrm{gp}}(\InternalAut(\G_a); H\F_2P_0(MO)) \Rightarrow \pi_* MO,\] and so we see that we need to understand $H\F_2P_0(MO)$, together with its comodule structure over the dual Steenrod algebra.
 
