--- a/preface.tex
+++ b/preface.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\section*{Acknowledgements}
+\subsection*{Acknowledgements}
 
 Matthew Ando, Michael Hopkins, Neil Strickland, Constantin Teleman
 
