--- a/hinfty.tex
+++ b/hinfty.tex
@@ -18,7 +18,7 @@ The proof of Quillen's theorem and its interpretation in terms of isogenies of f
 
 The Ando--Hopkins--Strickland result that the $\sigma$--orientation is an $H_\infty$--map
 
-\section*{Other stuff that goes in here}
+\subsection*{Other stuff that goes in this chapter}
 
 Neil's \textit{Finite Subgroups of Formal Groups} has (in addition to lots of results) a section 14 where he talks about the action of a generalized Hecke algebra on the $E$--theory of a space.
 
