--- a/finite.tex
+++ b/finite.tex
@@ -10,7 +10,7 @@
 still need to talk about closed and open subschemes, their basic properties
 
 
-\section{The context of a spectrum}
+\section{The context of a spectrum}\label{StableContextLecture}
 
 Today we will begin to make good on our promise, made during our investigation of the unoriented bordism ring, to explain where the Adams spectral sequence comes from.  This story neatly divides into two parts, and the first half is just an investigation of how rich of an algebraic category $\CatOf{C}$ we can find that supports a factorization
 % \begin{center}
