--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@
 \renewcommand{\>}{\rangle}
 \newcommand{\sm}{\wedge}
 \newcommand{\Susp}{\Sigma}
+\newcommand{\Loops}{\Omega}
 \renewcommand{\phi}{\varphi}
 \renewcommand{\epsilon}{\varepsilon}
 \newcommand{\eps}{\varepsilon}
