organize chapter 5 somewhat

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -131,18 +131,6 @@ Comparison with past scholia on ``piles''?
 
 
 
-\section{Coalgebraic formal schemes}
-
-Cartier duality
-
-Free formal groups and symmetric algebras
-
-The strong colimit lemma
-
-
-
-
-
 
 \section{Global cooperations}
 
@@ -184,6 +172,8 @@ Theorem 6.1 of R--W \textit{The Hopf ring for complex bordism} sounds like somet
 Section III.11 of Wilson's \textit{Primer} has a synopsis of how additive unstable operations should be treated.  (In particular, he remarks on pp.\ 62-3 that primitives in unstable operations are the \emph{additive} unstable operations, which seems important.)  Possibly this is enough to understand how additive unstable cooperations should be treated, or maybe unstable cooperations generally.
 
 There's also a document by Boardman, Johnson, and Wilson (Chapter 2 of the \textit{Handbook of Algebraic Topology}) that discusses an equivalence between Steve's approach and ``unstable comodules''.  Please read this.
+
+Snowball a discussion of coalgebraic formal schemes into one of these sections.
 
 
 
