--- a/sigma.tex
+++ b/sigma.tex
@@ -3,56 +3,29 @@
 \chapter{The $\sigma$-orientation}
 
 
-\todo{Write an introduction for me.}
-
-
-
-\section{Divisors and line bundles}
-
-\section{Weil pairings}
-
-\section{The Atiyah--Bott--Shapiro orientation}
-
-\section{The symmetric cocycle schemes}
-
-
-
-\subsection*{Things that belong in this chapter, sorted}
-
-Unstable cooperations from Morava's theories to classical complex and real $K$--theory
-
-$\Theta$--structures, symmetric biextensions, and Weil pairings
-
-Symmetric cocycle schemes and symmetric power schemes
-\todo[inline]{The technical condition guaranteeing the existence of symmetric power schemes is that the symmetric cocycle schemes are coalgebraic formal schemes, since then we have an involutive Cartier duality functor.  This comparison essentially comes out of saying that $C_k$ can be defined by a strong colimit, so if we can check that this strong colimit exists\ldots (cf. Prop 3.3 of the AHS preprint).}
-
-The maps $BU\<2k\> \to BU\<2k+2\>$ and $BU\<2k+2\> \to BU\<2k\>$\citeme{Prop 2.18 of the AHS preprint}
-
-Kitchloo--Laures--Wilson's results on Restriction A Hopf algebras and the bar spectral sequence
-
-$BSU_K$ \citeme{Section 6 in A--S} and the comparison of $\SDiv_0 \G$ with $C_2 \G$ \citeme{Prop 2.13 in FSKS}
-
-The A--S proof for finite height formal groups
-
-$BU\<6\>^K$ \citeme{Section 7, Lemma 1.4 of A--S}
-
-Moving from $BU$ to $MU$: $MU\<6\>^E$ is a $\G_m$--torsor over $BU\<6\>^E$, so if you can produce another torsor and any map between them, that automatically gives you an isomorphism and hence a description.  This is pretty easy to read about in section 2.4 of the AHS preprint.  The big theorem is Theorem 2.42 in Section 2.4.4.
-
-The A--H--S theorem for even-periodic ring spectra; for elliptic spectra; for complex elliptic spectra with an interpretation of modularity; for $K_{\Tate}$ with an interpretation with $\theta$--functions
-
-``Modularity'' of the $K_{\Tate}$ orientation
-
-Results on $BO$, $BSO$, $B\Spin$, and $B\String$
-
-The Atiyah--Bott--Shapiro orientation and the fibration $BSU \to BSpin$ \citeme{Theorem 2.3.5.iv in KLW}
-
-Analysis of $M\String$ at low heights: $\Sigma$--structures
+\todo[inline]{Write an introduction for me.  Use unstable cooperations from Morava's theories to classical complex and real $K$--theory.}
 
 
 
 
 
-\subsection*{The Ando--Strickland analysis}
+\section{The complex Atiyah--Bott--Shapiro orientation}
+
+
+
+
+
+\section{Elliptic curves and $\theta$--functions}
+
+The theorem of the cube
+
+$\Theta$--structures and symmetric biextensions
+
+Weil pairings
+
+
+
+\section{The Ando--Strickland analysis}
 
 \begin{lemma}\label{EasyCompatibilityWithdn}\citeme{Lemma 4.5 of AS}
 There is a unique $\lambda \in \Z/n$ such that the following triangle commutes:
@@ -185,8 +158,7 @@ The map \[BU[6, \infty)^E \to C^3(\CP^\infty_E; \Gm)\] is an isomorphism.  Also,
 
 
 
-
-\subsection*{Elliptic cohomology theories}
+\section{Elliptic spectra}
 
 \begin{definition}
 An \textit{elliptic spectrum} consists of:
@@ -224,10 +196,7 @@ Tate $K$--theory
 
 \todo[inline]{From the intro to the AHS preprint: For any lattice $\Lambda \subseteq \C$, we get a map $\Phi: MU[6, \infty) \to HP_\Lambda$ which sends $(2n)$--dimensional bordism classes $M$ to numbers $\Phi(M; \Lambda) \cdot u_{\Lambda}^n$. Suppose $\Lambda$ and $\Lambda'$ are two lattices with $\lambda \cdot \Lambda = \Lambda'$. This induces a map $HP_{\Lambda'} \to HP_\Lambda$ which intertwines the maps $\Phi$ by $\Phi(M; \lambda \cdot \Lambda) = \lambda^{-n} \Phi(M; \Lambda)$.  The usual appearance of a modular form (via $SL_2$ invariance) can be extracted from the top of page 5, if you want.  You can also show that this ``functional equation for a modular form'' is actually realized by a function by considering the elliptic cohomology theory built out of the bundle of elliptic curves $\mathfrak h \times \C/(1, \tau) \to \mathfrak h$ and the ordinary coefficient ring $\sheaf O[u^\pm]$, $\sheaf O$ the ring of holomorphic functions on $\mathfrak h$.}
 
-
-
-
-\subsection*{The Tate orientation}
+-----------
 
 Define the classical $\theta$--function on the Tate curve by \[\tilde \theta_q(u) = (1 - u) \prod_{n > 0} (1 - q^n u)(1 - q^nu^{-1}) \in \Z[u^{\pm}]\llbracket q \rrbracket.\]  Write $t = 1-u$ for the usual coordinate on the formal multiplicative group; then we can think of $\tilde \theta_q(u)$ as an element of $\Z\llbracket q\rrbracket\llbracket t\rrbracket$ and thus as a function on $\G_m \times D_{\Tate}$, $D_{\Tate} = \Spec \Z\llbracket t \rrbracket$ the Tate domain.  In fact, $\tilde\theta_q(u)$ is even a coordinate on this formal group over $D_{\Tate}$, which one can identify with $\widehat C_{\Tate}$.
 
@@ -251,6 +220,50 @@ The ratio $s(\widehat C_{\Tate} / D_{\Tate}) / \delta^3(\tilde\theta)$ is a powe
 \begin{definition}
 Let $\gamma$ denote the element $K_{\Tate}(\Z \times BU)$ determined by the vector bundle operation \[\gamma: -V \mapsto \prod_{n > 0} \sum_{k \ge 0} q^{nk} \Sym^k(V),\] and let $\bar\gamma$ denote its complex conjuguate.  Since $K_{\Tate}^0(MUP)$ is a module over $K_{\Tate}(\Z \times BU)$, we can define an element \[\sigma_{\Tate} := \gamma \cdot \bar\gamma \cdot \alpha,\] where $\alpha$ is the usual orientation $MP \to KU$ corresponding to the coordinate $1 - t$ on the formal group $\G_m$.
 \end{definition}
+
+\todo{``Modularity'' of the $K_{\Tate}$ orientation?}
+
+
+------------
+
+Criteria for the existence of symmetric cocycle schemes.
+
+AHS: they exist
+\todo[inline]{The technical condition guaranteeing the existence of symmetric power schemes is that the symmetric cocycle schemes are coalgebraic formal schemes, since then we have an involutive Cartier duality functor.  This comparison essentially comes out of saying that $C_k$ can be defined by a strong colimit, so if we can check that this strong colimit exists\ldots (cf. Prop 3.3 of the AHS preprint).}
+
+
+
+
+
+
+
+\section{The $\String$ orientation}
+
+Kitchloo--Laures--Wilson's results on Restriction A Hopf algebras and the bar spectral sequence
+
+Formal schemes for certain real $K$--theory spaces
+
+The Atiyah--Bott--Shapiro orientation and the fibration $BSU \to BSpin$ \citeme{Theorem 2.3.5.iv in KLW}
+
+The $\String$ orientation and $\Sigma$--structures
+
+
+
+
+
+
+
+\subsection*{Things that belong in this chapter, sorted}
+
+
+The maps $BU\<2k\> \to BU\<2k+2\>$ and $BU\<2k+2\> \to BU\<2k\>$\citeme{Prop 2.18 of the AHS preprint}
+
+
+$BSU_K$ \citeme{Section 6 in A--S} and the comparison of $\SDiv_0 \G$ with $C_2 \G$ \citeme{Prop 2.13 in FSKS}
+
+$BU\<6\>^K$ \citeme{Section 7, Lemma 1.4 of A--S}
+
+Moving from $BU$ to $MU$: $MU\<6\>^E$ is a $\G_m$--torsor over $BU\<6\>^E$, so if you can produce another torsor and any map between them, that automatically gives you an isomorphism and hence a description.  This is pretty easy to read about in section 2.4 of the AHS preprint.  The big theorem is Theorem 2.42 in Section 2.4.4.
 
 
 
