updates to the title and class info

--- a/main.tex
+++ b/main.tex
@@ -133,7 +133,7 @@
 \crefname{section}{lecture}{lectures} \Crefname{section}{Lecture}{Lectures}
 \crefname{chapter}{case study}{case studies} \Crefname{chapter}{Case Study}{Case Studies}
 
-\title{Untitled book project}
+\title{Formal Geometry in Algebraic Topology \\ \vspace{0.5\baselineskip} \small{Lecture notes}}
 \author{Eric Peterson}
 
 \newcounter{whichdate}
